crates/sui-prover/tests/snapshots/quantifiers/partial_pattern_forall.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: Invalid quantifier macro pattern: expected a lambda function, but found an inlined expression
   ┌─ tests/inputs/quantifiers/partial_pattern_forall.fail.move:8:1
   │  
 8 │ ╭ fun test_2_spec() {
 9 │ │     let positive = begin_forall_lambda();
10 │ │     ensures(*positive);
11 │ │ }
   │ ╰─^
